clusters/homelab/apps/wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  selector:
    app: wg-easy
  ports:
    - name: wireguard
      port: 51820
      targetPort: 51820
      protocol: UDP
    - name: http
      port: 51821
      targetPort: 51821
  type: ClusterIP
